# VSProc

./: CMakeLists.txt  README.md  ReadMe.txt
CMakeModules/: doExportHeader.cmake
data/: UnitOfMeasure.json
include/Basic/: commondefs.h  commonstrs.h  dbManager.h  namedobj.h  seisDBManager.h  wellDBManager.h
include/uiBase/: uibaseobject.h  uibody.h  uimainwin.h
include/uiComps/: uicreateprojdlg.h  uiopenprojdlg.h  uiprojectdlgs.h
include/uiMain/: uiapp.h  uiappmgr.h  uimenuids.h  uimenumgr.h
src/: CMakeLists.txt
src/Basic/: CMakeLists.txt  commonstrs.cc  dbManager.cc  seisDBManager.cc  wellDBManager.cc
src/app/: CMakeLists.txt  main.cc
src/uiBase/: CMakeLists.txt  uibaseobject.cc  uimainwin.cc
src/uiComps/: CMakeLists.txt  uicreateprojdlg.cc  uiopenprojdlg.cc  uiprojectdlgs.cc
src/uiMain/: CMakeLists.txt  uiapp.cc  uiappmgr.cc  uimenumgr.cc
