#________________________________________________________________________
#
# Author: Khushnood Qadir
#________________________________________________________________________
#

# src/CMakeLists.txt
add_subdirectory( app )
add_subdirectory( Basic )
add_subdirectory( uiMain )
add_subdirectory( uiComps )
